# rpm2swidtag

./: .cirrus.yml  .dockerignore  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  rpm2swidtag-tagid.xslt  rpm2swidtag.conf  rpm2swidtag.py  rpm2swidtag.spec.in  rpm2swidtag.xslt  setup.cfg  setup.py  swidq-dump.xslt  swidq-files.xslt  swidq-info.xslt  swidq-xml-supplemental-structure.xslt  swidq-xml.xslt  swidq.conf  swidtag-template.xml  swidtag.xslt  template-extra.swidtag  template.swidtag  test.sh
.circleci/: config.yml
.copr/: Makefile
.github/workflows/: build-test.yaml
bdist_rpm/: install_script
dnf/plugins/: swidtags.conf
lib/dnf-plugins/: rpm2swidtag.py  swidtags.py
lib/rpm2swidtag/: __init__.py  payload.py  repodata.py  rpm.py
lib/swidq/: __init__.py
rpm2swidtag.conf.d/: fedora-28.conf  fedora-29.conf  fedora-30.conf  fedora-31.conf  fedora-32.conf  fedora-33.conf  fedora-34.conf  fedora-35.conf  fedora-36.conf  fedora-37.conf  fedora-38.conf  fedora-39.conf  fedora-40.conf  fedora-rawhide.conf
tests/: Dockerfile  build-rpms.sh  build.sh  dnf-swidq.conf  dnf.conf  repodata-swidtags-xmlsec-1.3.xml  repodata-swidtags.xml  rpm2swidtag.conf  swidq-inst.conf  swidq-swiddata1-swiddata2.out  swidq-swiddata1.out  swidq-swiddata2.out  swidq-xml-supplemental-structure-inst.xslt  swidq-xml-supplemental-structure.xslt  swidq.conf  swidtag-template-extra.xml  swidtag-template-minimal.xml
tests/dnf-plugins-conf/: rpm2swidtag.conf  swidtags.conf  swidtags.conf.in
tests/gnupg/: pubring.kbx  secring.gpg
tests/pkg1/: pkg1.spec  (+21 more)
(+94 files in other folders)
